Adding JLink to Build.sh to package as a standalone app taking 38M